--- a/app/templates/user.html
+++ b/app/templates/user.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
-
+{% import "_macros.html" as macros %}
 {% block title %} Blog - {{ user.username }}{% endblock %}
 
 {% block page_content %}
@@ -32,4 +32,10 @@
 </div>
 <h3>Posts by {{ user.username }}</h3>
 {% include '_posts.html' %}
+{% include '_post.html' %}
+{% if pagination %}
+<div class="pagination">
+    {{ macros.pagination_widget(pagination, '.user', username=user.username)}}
+</div>
+{% endif %}
 {% endblock %}
