--- a/app/templates/404.html
+++ b/app/templates/404.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %}Blog - Page Not Found{% endblock %}
+{% block title %}Bloggg - Page Not Found{% endblock %}
 
 {% block page_content %}
 <div class="page-header">
