--- a/app/templates/auth/login.html
+++ b/app/templates/auth/login.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 {% import "bootstrap/wtf.html" as wtf %}
-{% block title %}Blog - Login{% endblock %}
+{% block title %}Bloggg - Login{% endblock %}
 
 {% block page_content %}
 <div class="page-header">
