--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -1,6 +1,6 @@
 {% extends "bootstrap/base.html" %}
 
-{% block title %}Blog{% endblock %}
+{% block title %}Bloggg{% endblock %}
 
 {% block head %}
 {{ super() }}
@@ -23,7 +23,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="{{ url_for('main.index') }}">Blog</a>
+            <a class="navbar-brand" href="{{ url_for('main.index') }}">Bloggg</a>
         </div>
         <div class="navbar-collapse collapse">
             <ul class="nav navbar-nav">
