--- a/app/templates/moderate.html
+++ b/app/templates/moderate.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% import "_macros.html" as macros %}
 
-{% block title %}Blog - Comment Moderation{% endblock %}
+{% block title %}Bloggg - Comment Moderation{% endblock %}
 
 {% block page_content %}
 <div class="page-header">
