--- a/app/templates/post.html
+++ b/app/templates/post.html
@@ -2,7 +2,7 @@
 {% import "bootstrap/wtf.html" as wtf %}
 {% import "_macros.html" as macros %}
 
-{% block title %}Blog - Post{% endblock %}
+{% block title %}Bloggg - Post{% endblock %}
 
 {% block page_content %}
 {% include '_posts.html' %}
